--- a/people.html
+++ b/people.html
@@ -93,36 +93,54 @@
                       (Assistant Professor Linguistics)<br>
                     </p>
                     <h5>
-                      Senior staff
+                      Permanent staff
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Postdoc Linguistics)<br>
+                      <a href="https://enalisnick.github.io/" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning)<br>
                       <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT)<br>
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">James Trujillo</a> (Assistant Professor Language Sciences for Social Good)<br>
-                      <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Sign Linguistics and Language Acquisition)<br>
+                      <a href="https://www.illc.uva.nl/People/person/4556/Dr-James-Paul-Trujillo" target="_blank">James Trujillo</a> (Assistant Professor Visual Communication)<br>
                     </p>
                     <h5>
-                      Junior researchers
+                      Postdocs and staff on ongoing projects
+                    </h5>
+                    <p class="text-black-50 mb-3">
+                      Lisa Gierman (Project: SignBank - staff) <br>
+                      <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
+                      Pieter Manders (Project: SignBank - technical staff) <br>
+                      Ellen Nauta (Project: SignBank - staff) <br>
+                      Gomèr Otterspeer (Project: SignBank - technical staff) <br>
+                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: SignBank / Questions / Reference - staff)<br>
+                      <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Project: Questions - Postdoc)<br>
+                      Dalene Venter (Project: SignBank - staff) <br>
+                      Casper Wubbolts (Project: SignBank - technical staff) <br>
+                    </p>
+                    <h5>
+                      PhD candidates
+                    </h5>
+                    <p class="text-black-50 mb-3">
+                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Sign Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (AI and Sign Linguistics)<br>
+                      <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (Sign Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (Sign Linguistics)<br>
+                      <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
+                    </p>
+                    <h5>
+                      Master and bachelor students with ongoing thesis projects
                     </h5>
                     <p class="text-black-50 mb-3">
                       Jari Andersen (MSc Software Engineering)<br>
-                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD Linguistics)<br>
-                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD AI and Linguistics)<br>
-                      Lisa Gierman (Researcher) <br>
-                      <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD Linguistics)<br>
                       Lisa Loy (rMA Linguistics)<br>
-                      Ellen Nauta (Researcher) <br>
-                      <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
-                      Gomèr Otterspeer (Researcher) <br>
-                      Ray Pelupessy (BA Linguistics, Lab Manager) <br>
                       Oline Ranum (MSc AI)<br>
-                      <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (PhD Linguistics)<br>
-                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Researcher)<br>
-                      Galya Stern (BA Linguistics, Lab Manager) <br>
-                      Dalene Venter (Researcher) <br>
                       Elynn Weijland (MSc Logic)<br>
-                      Casper Wubbolts (Researcher) <br>
+                    </p>
+                    <h5>
+                      Lab managers and student assistants
+                    </h5>
+                    <p class="text-black-50 mb-3">
+                      Ray Pelupessy (Lab Manager) <br>
+                      Galya Stern (Lab Manager) <br>
+                      Esmée de Roo (Student Assistant)<br>
                       <br>
                     </p>
 
