--- a/people.html
+++ b/people.html
@@ -105,15 +105,15 @@
                       Postdocs and staff on ongoing projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Lisa Gierman (Project: SignBank - staff) <br>
+                      Lisa Gierman (Project: SignBank - Staff) <br>
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
-                      Pieter Manders (Project: SignBank - technical staff) <br>
-                      Ellen Nauta (Project: SignBank - staff) <br>
-                      Gomèr Otterspeer (Project: SignBank - technical staff) <br>
+                      Pieter Manders (Project: SignBank - Technical staff) <br>
+                      Ellen Nauta (Project: SignBank - Staff) <br>
+                      Gomèr Otterspeer (Project: SignBank - Technical staff) <br>
                       <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: SignBank / Questions / Reference - staff)<br>
                       <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Project: Questions - Postdoc)<br>
-                      Dalene Venter (Project: SignBank - staff) <br>
-                      Casper Wubbolts (Project: SignBank - technical staff) <br>
+                      Dalene Venter (Project: SignBank - Staff) <br>
+                      Casper Wubbolts (Project: SignBank - Technical staff) <br>
                     </p>
                     <h5>
                       PhD candidates
