--- a/people.html
+++ b/people.html
@@ -126,10 +126,15 @@
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
                     </p>
                     <h5>
+                      Scientific programmer
+                    </h5>
+                    <p class="text-black-50 mb-3">
+                      Jari Andersen<br>
+                    </p>
+                    <h5>
                       Master and bachelor students with ongoing thesis projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Jari Andersen (MSc Software Engineering)<br>
                       Lisa Loy (rMA Linguistics)<br>
                       Oline Ranum (MSc AI)<br>
                       Elynn Weijland (MSc Logic)<br>
@@ -151,7 +156,7 @@
             <!-- Column for GIF -->
             <div class="col-12 col-md project-text order-md-12 text-left ml-md textDIV">
             <h5>
-              Affiliate members
+              Affiliate researchers
             </h5>
             <p class="text-black-50 mb-3">
               <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
@@ -171,7 +176,9 @@
                Master and bachelor alumni
              </h5>
              <p class="text-black-50 mb-1">
-              <b>2023</b>: Jan Pieter Kroeb (BSc CS),
+              <b>2023</b>: 
+              Jari Andersen (MSc Software Engineering),
+              Jan Pieter Kroeb (BSc CS),
               Sep Huls (BSc CS), 
               Marleen Gaasbeek (MSc Logic),
               Natalie Hollain (MSc Data Science),
