updating the email address

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -376,7 +376,7 @@
   <div style="line-height:150%;">
     <!-- <br>&copy;2020 SignLab Amsterdam -->
     <br>
-    <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
+    <i class="bi bi-envelope"></i>: signlab@uva.nl
   </div>
 </footer>
 
