--- a/playground.html
+++ b/playground.html
@@ -510,7 +510,7 @@
   <div style="line-height:150%;">
     <br>&copy;2020 SignLab Amsterdam
     <br>
-    <i class="bi bi-envelope align-text-bottom"></i>: signlab.amsterdam@gmail.com
+    <i class="bi bi-envelope align-text-bottom"></i>: signlab@uva.nl
   </div>
 </footer>
 
