--- a/publications.html
+++ b/publications.html
@@ -258,7 +258,7 @@
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
     <br>
-    <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
+    <i class="bi bi-envelope"></i>: signlab@uva.nl
   </div>
 </footer>
 
