--- a/people.html
+++ b/people.html
@@ -110,7 +110,7 @@
                       Pieter Manders (Project: SignBank - Technical staff) <br>
                       Ellen Nauta (Project: SignBank - Staff) <br>
                       Gomèr Otterspeer (Project: SignBank - Technical staff) <br>
-                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: SignBank / Questions / Reference - staff)<br>
+                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: Questions / Reference - Staff)<br>
                       <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Project: Questions - Postdoc)<br>
                       Dalene Venter (Project: SignBank - Staff) <br>
                       Casper Wubbolts (Project: SignBank - Technical staff) <br>
