open avond update

--- a/index.html
+++ b/index.html
@@ -113,15 +113,26 @@
           <!-- Column for picture -->
 
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+            
             <div class="embed-responsive embed-responsive-16by9 mb-5">
-              <iframe src="https://www.youtube.com/embed/7XDihmJPzoo?rel=0&amp;showinfo=0&amp;loop=1" title="SignLab Open House video with Dutch subtitles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://youtu.be/bpWskZqTttU" title="Open Avond 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
+            
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
               <h5>SignLab Open House</h5>
               <p class="mb-6 mt-6">
-                In April 2023, we held the first SignLab Open House, in collaboration with the Dutch Sign Language Centre (Nederlands Gebarencentrum)
-                and the University of Applied Sciences Utrecht (Hogeschool Utrecht). 
-                We made a short aftermovie in NGT, with Dutch voiceover and subtitles. Enjoy watching!
+                The Signlab is organizing another open evening on April 19, 2024. Are you coming too? On this evening 
+                we talk about the research we do into sign languages. There is plenty of opportunity for
+                getting to know each other and networking. The location is the Doelenzaal (Singel 425 Amsterdam,
+                Room C007). Registration is mandatory and can be done until April 12 (or up to the maximum number of visitors).
+                See the link below. The program is as follows: <br>
+                6.15 PM Walk-in <br>
+                6:30-8:30 PM Lectures and demos <br>
+                8:30 PM - 10:00 PM Drinks! <br>
+                The event will take place in both NGT and Dutch. NGT-NL interpreters will be present all evening.
+                Questions or remarks? Feel free to email us signlab@uva.nl. <br>
+                We also ask you to email us if you have registered, but can no longer come. Maybe someone else can fill the spot. <br>
+                Sign In! <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_6Eui1omADfYPI6G">Registration form</a>
               </p>                 
               <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
 
