--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
             
             <div class="embed-responsive embed-responsive-16by9 mb-5">
-              <iframe src="https://youtu.be/bpWskZqTttU" title="Open Avond 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/bpWskZqTttU" title="Open Avond 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
             
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
