--- a/index.html
+++ b/index.html
@@ -121,18 +121,19 @@
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
               <h5>SignLab Open House</h5>
               <p class="mb-6 mt-6">
-                The Signlab is organizing another open evening on April 19, 2024. Are you coming too? On this evening 
-                we talk about the research we do into sign languages. There is plenty of opportunity for
-                getting to know each other and networking. The location is the Doelenzaal (Singel 425 Amsterdam,
-                Room C007). Registration is mandatory and can be done until April 12 (or up to the maximum number of visitors).
-                See the link below. The program is as follows: <br>
+                Signlab is organizing another open evening on April 19, 2024. Are you coming? This evening 
+                we will talk about the research we are doing sign languages.
+                The open evening is held at the University Library, Singel 425 Amsterdam, Room C007 (Doelenzaal). 
+                Registration is mandatory and can be done until April 12 (or until the maximum number of registrations is reached).<br><br>
+                The registration form is <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_6Eui1omADfYPI6G">here</a>.<br><br>
+                The program is as follows: <br><br>
                 6.15 PM Walk-in <br>
-                6:30-8:30 PM Lectures and demos <br>
-                8:30 PM - 10:00 PM Drinks! <br>
-                The event will take place in both NGT and Dutch. NGT-NL interpreters will be present all evening.
-                Questions or remarks? Feel free to email us signlab@uva.nl. <br>
+                6:30-8:30 PM Presenations and demos <br>
+                8:30 PM - 10:00 PM Drinks! <br><br>
+                The event will be in NGT and Dutch. NGT-NL interpreters will be present all evening.
+                Questions or remarks? Feel free to email us at signlab@uva.nl.
                 We also ask you to email us if you have registered, but can no longer come. Maybe someone else can fill the spot. <br>
-                Sign In! <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_6Eui1omADfYPI6G">Registration form</a>
+                
               </p>                 
               <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
 
