--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 The program is as follows: <br><br>
                 6.15 PM Walk-in <br>
                 6:30-8:30 PM Presenations and demos <br>
-                8:30 PM - 10:00 PM Drinks! <br><br>
+                8:30-10:00 PM Drinks! <br><br>
                 The event will be in NGT and Dutch. NGT-NL interpreters will be present all evening.
                 Questions or remarks? Feel free to email us at signlab@uva.nl.
                 We also ask you to email us if you have registered, but can no longer come. Maybe someone else can fill the spot. <br>
