--- a/people.html
+++ b/people.html
@@ -104,6 +104,7 @@
                       Postdocs and staff on ongoing projects
                     </h5>
                     <p class="text-black-50 mb-3">
+                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Project: Questions - Postdoc)<br>
                       Lisa Gierman (Project: SignBank - Staff) <br>
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
                       Pieter Manders (Project: SignBank - Technical staff) <br>
@@ -118,7 +119,6 @@
                       PhD candidates
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Sign Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (AI and Sign Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (Sign Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (Sign Linguistics)<br>
