--- a/people.html
+++ b/people.html
@@ -104,6 +104,7 @@
                       Postdocs and staff on ongoing projects
                     </h5>
                     <p class="text-black-50 mb-3">
+                      <a href="https://m-degano.github.io/" target="_blank">Marco Degano</a> (Project: Indefinites - Postdoc)<br>
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Project: Questions - Postdoc)<br>
                       Lisa Gierman (Project: SignBank - Staff) <br>
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
