--- a/people.html
+++ b/people.html
@@ -126,26 +126,24 @@
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
                     </p>
                     <h5>
-                      Scientific programmer
+                      Scientific programmers
                     </h5>
                     <p class="text-black-50 mb-3">
                       Jari Andersen<br>
+                      Oline Ranum<br>
                     </p>
                     <h5>
-                      Master and bachelor students with ongoing thesis projects
+                      <!-- Master and bachelor students with ongoing thesis projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Lisa Loy (rMA Linguistics)<br>
-                      Oline Ranum (MSc AI)<br>
-                      Elynn Weijland (MSc Logic)<br>
-                    </p>
+                      
+                    </p> -->
                     <h5>
                       Lab managers and student assistants
                     </h5>
                     <p class="text-black-50 mb-3">
                       Ray Pelupessy (Lab Manager) <br>
                       Galya Stern (Lab Manager) <br>
-                      Esmée de Roo (Student Assistant)<br>
                       <br>
                     </p>
 
@@ -176,6 +174,13 @@
                Master and bachelor alumni
              </h5>
              <p class="text-black-50 mb-1">
+              <b>2024</b>:
+              Lisa Loy (rMA Linguistics),
+              Oline Ranum (MSc AI),
+              Elynn Weijland (MSc Logic),
+              Galya Stern (BA Linguistics).<br>
+            </p>
+            <p class="text-black-50 mb-1">
               <b>2023</b>: 
               Jari Andersen (MSc Software Engineering),
               Jan Pieter Kroeb (BSc CS),
