--- a/people.html
+++ b/people.html
@@ -108,7 +108,6 @@
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Project: Questions - Postdoc)<br>
                       Lisa Gierman (Project: SignBank - Staff) <br>
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
-                      Pieter Manders (Project: SignBank - Technical staff) <br>
                       Ellen Nauta (Project: SignBank - Staff) <br>
                       Gomèr Otterspeer (Project: SignBank - Technical staff) <br>
                       <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: Questions / Reference - Staff)<br>
@@ -154,11 +153,12 @@
             <!-- Column for GIF -->
             <div class="col-12 col-md project-text order-md-12 text-left ml-md textDIV">
             <h5>
-              Affiliate researchers
+              Affiliate staff
             </h5>
             <p class="text-black-50 mb-3">
               <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
               <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
+              <a href="https://pietermanders.com/" target="_blank">Pieter Manders</a> (Lecturer Camera Techniques and Video Editing ) <br>
               <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
               <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
             </p>
