--- a/people.html
+++ b/people.html
@@ -111,6 +111,7 @@
                       Ellen Nauta (Project: SignBank - Staff) <br>
                       Gomèr Otterspeer (Project: SignBank - Technical staff) <br>
                       <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: Questions / Reference - Staff)<br>
+                      <a href="https://www.illc.uva.nl/People/person/5645/Annika-Schiefner" target="_blank">Annika Schiefner</a> (Project: SignBeach - Postdoc)<br>
                       <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Project: Questions - Postdoc)<br>
                       Dalene Venter (Project: SignBank - Staff) <br>
                       Casper Wubbolts (Project: SignBank - Technical staff) <br>
@@ -122,14 +123,15 @@
                       <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (AI and Sign Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (Sign Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (Sign Linguistics)<br>
+                      <a href="https://www.illc.uva.nl/People/person/5642/Anna-Palmann" target="_blank">Anna Palmann</a> (Multimodal Communication)<br>
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
                     </p>
                     <h5>
                       Scientific programmers
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Jari Andersen<br>
-                      Oline Ranum<br>
+                      <a href="https://www.illc.uva.nl/People/person/5621/Jari-Andersen" target="_blank">Jari Andersen</a><br>
+                      <a href="https://olineranum.github.io/" target="_blank">Oline Ranum</a><br>
                     </p>
                     <h5>
                       <!-- Master and bachelor students with ongoing thesis projects
@@ -138,7 +140,7 @@
                       
                     </p> -->
                     <h5>
-                      Lab managers and student assistants
+                      Lab managers
                     </h5>
                     <p class="text-black-50 mb-3">
                       Ray Pelupessy (Lab Manager) <br>
