fix eenvandaag image

--- a/media.html
+++ b/media.html
@@ -81,7 +81,7 @@
 
           <!-- Column for picture -->
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
-            <a href="https://eenvandaag.avrotros.nl/item/tekort-aan-gebarentolken-belemmert-doven-in-hun-dagelijks-leven-vooral-bezorgd-over-kwetsbare-gebruikers/" target="_blank"><img src="images/EenVandaag.png" class="img-fluid" alt="A screenshot of the Eenvandaag video."></a>
+            <a href="https://eenvandaag.avrotros.nl/item/tekort-aan-gebarentolken-belemmert-doven-in-hun-dagelijks-leven-vooral-bezorgd-over-kwetsbare-gebruikers/" target="_blank"><img src="images/Eenvandaag.png" class="img-fluid" alt="A screenshot of the Eenvandaag video."></a>
           </div>
 
         </div>
