update home page

--- a/research-theory.html
+++ b/research-theory.html
@@ -73,7 +73,7 @@
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
 
-                    <h5>General scope and methods</h5>
+                    <h5>Theory development: General scope and methods</h5>
 
                     <p class="mb-4">
                       We investigate how signs and signed sentences are structured and interpreted across sign languages,
